# LearnLibTorch

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
.github/workflows/: cl.yml  cmake.yml  test.yml
chap0/: readme.md
chap1/: CMakeLists.txt  HelloWorld.cpp  readme.md
chap1/python/: HelloWorld.py
chap2/: CMakeLists.txt  TensorBasics.cpp  readme.md
chap2/include/: TensorAttribute.h  TensorCalculate.h  TensorCuda.h  TensorIndexSlice.h  TensorInit.h  TensorTransform.h
chap2/python/: TensorBasics.py
chap3/: AutoGrad.cpp  CMakeLists.txt  readme.md
chap3/python/: AutoGrad.py
chap4/: BasicModels.cpp  CMakeLists.txt  readme.md
chap4/include/: CMakeLists.txt  CNN.cpp  CNN.h  LR.cpp  LR.h  MLP.cpp  MLP.h
chap4/python/: BasicModels.py
chap4_2/: readme.md
chap5/: CMakeLists.txt  PracticeModels.cpp  readme.md
chap5/data/: prepare_cora.sh  prepare_mnist.sh
chap5/include/: CMakeLists.txt  GCN.cpp  GCN.h  Lenet5.cpp  Lenet5.h
chap5/python/: Lenet5MNIST.py  PracticeModels.py  utils.py
chap6/: CMakeLists.txt  TorchScript.cpp  readme.md
chap6/python/: export_model.py
chap7/: check_profile.py  readme.md
chap7/csrc/: CMakeLists.txt  gc_layer.cpp  setup.py
chap7/python/: extend.py
chap8/: check.py  readme.md
chap8/python/: AutoGrad.py
